[package]
name = "WebContent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
select = "0.5.0"
tokio = {version = "1", features = ["full"]}
futures = "*"
prettytable-rs = "0.8.0"